tests/paczka1/fuzzy1/17276545.err
Error in line 14: NADmK6 A680 13,4
Error in line 30: S899 S11 45,1
Error in line 33: 66fjbKGfZr S899 96,38
Error in line 31: S899 A680 0,9
